--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>complete responsive hotel booking website design tutorial</title>
+   <title>CITYVIEW</title>
 
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 
@@ -125,14 +125,12 @@
             <div class="box">
                <p>rooms <span>*</span></p>
                <select name="rooms" class="input" required>
-                  <option value="1">Standard room</option>
+                  <option value="1">standard room</option>
                   <option value="2">Delux rooms</option>
-                  <option value="3">Superior rooms</option>
+                  <option value="3">superior rooms</option>
                   <option value="4">Executive rooms</option>
-                  <option value="5">Lexery Apartment rooms</option>
-                  <option value="6">Single rooms</option>
-                  <option value="7">room and parlour rooms</option>
-                  <option value="8">Single rooms</option>
+                  <option value="5">Single rooms</option>
+                  <option value="6">6 rooms</option>
                </select>
             </div>
          </div>
@@ -170,16 +168,6 @@
             <a href="#contact" class="btn">contact us</a>
          </div>
       </div>
-
-      <div class="row">
-         <div class="image">
-            <img src="images/about-img-3.jpg" alt="">
-         </div>
-
-      <div class="row">
-         <div class="image">
-            <img src="images/about-img-4.jpg" alt="">
-         </div>
 
       <div class="row">
          <div class="image">
@@ -286,11 +274,11 @@
             <div class="box">
                <p>rooms <span>*</span></p>
                <select name="rooms" class="input" required>
-                  <option value="1">1 room</option>
-                  <option value="2">2 rooms</option>
-                  <option value="3">3 rooms</option>
-                  <option value="4">4 rooms</option>
-                  <option value="5">5 rooms</option>
+                  <option value="1">standard room</option>
+                  <option value="2">Delux rooms</option>
+                  <option value="3">superior rooms</option>
+                  <option value="4">Executive rooms</option>
+                  <option value="5">Single rooms</option>
                   <option value="6">6 rooms</option>
                </select>
             </div>
@@ -433,10 +421,10 @@
       <div class="box-container">
 
          <div class="box">
-            <a href="tel:1234567890"><i class="fas fa-phone"></i> +123-456-7890</a>
-            <a href="tel:1112223333"><i class="fas fa-phone"></i> +111-222-3333</a>
-            <a href="mailto:shakhanas@gmail.com"><i class="fas fa-envelope"></i> shakhanas@gmail.com</a>
-            <a href="#"><i class="fas fa-map-marker-alt"></i> mumbai, india - 400104</a>
+            <a href="tel:1234567890"><i class="fas fa-phone"></i> +234-456-7890</a>
+            <a href="tel:1112223333"><i class="fas fa-phone"></i> +234-222-3333</a>
+            <a href="mailto:shakhanas@gmail.com"><i class="fas fa-envelope"></i> binainus@gmail.com</a>
+            <a href="#"><i class="fas fa-map-marker-alt"></i> oregu lagos </a>
          </div>
 
          <div class="box">
@@ -457,7 +445,7 @@
 
       </div>
 
-      <div class="credit">&copy; copyright @ 2022 by mr. web designer | all rights reseved!</div>
+      <div class="credit">&copy; copyright @ 2022 by BINAINU SHAIBU FULLSTACK DEVELOPER | all rights reseved!</div>
 
    </section>
 
